# trader

./: .gitignore  Makefile  README.md  main.c  meson.build
docs/: CNAME  deriv.html  index.html
include/: canvas.h  chart.h  cleanup.h  database.h  file.json  interval.h  main.h  session.h  symbols.h  window.h
logs/: hwparam.json
res/: gresources.xml  meson.build
res/css/: style.css
res/gl/: Received message echo.txt  fragment.spv  meson.build  shader.frag  shader.vert  vertex.spv
src/: canvas.c  cartesian.c  chart.c  cleanup.c  database.c  file.js  interval.c  main.c  meson.build  session.c  symbols.c  window.c
